# block-crosscoder-experiment

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
block_crosscoder_experiment/: __init__.py  activation_identity.py  battery.py  campaign.py  codec.py  cuda_code_norm.py  cuda_gradient_copy.py  cuda_sparse_decode.py  durability.py  evaluation.py  gram.py  implementation.py  metrics.py  model.py  phase1.py  runtime_limits.py  serialization.py  store.py  studies.py  synthetic.py  trainer.py
data/: winner.json
docs/: audit.md  audit_2026-07-20.md  design-review-2026-07-16.md  design-review-2026-07-17-fidelity.md  design.md  findings-interim-artifact-analysis.md  findings-phase-minus1-battery.md  findings-phase0-control.md  findings-phase0-gemma.md  findings-phase0.md  findings-phase05-cross-layer.md  findings-phase09-rehearsal.md  findings-phase096-pilot4b.md  findings-phase096-tier-a.md  findings-phase099-tranche1.md  findings.md  implementation_audit_2026-07-22.md  literature.md  manifold-tuning.md  paper_comparison.md  phase2_gate_review_2026-07-23.md  runbook-phase096.md  runbook-phase099.md
figures/: README.md  index.html  manifest.json
references/: refs.yaml
scripts/: check_gemma_split_geometry.py  check_gemma_supervised_ring.py  check_phase05_cross_layer.py  drill_store_resume.py  export_phase09_toy_manifold.py  extend_pilot4b_store.py  extend_store.py  harvest_phase09_store.py  harvest_phase0_gemma.py  harvest_pilot4b_store.py  harvest_store.py  run_battery.py  run_bundle_sweep.py  run_capture_sweep.py  run_phase096_pilot4b.sh  run_phase096_pilot4b_round3.sh  run_phase096_pilot4b_round4.sh  run_phase096_tier_a.sh  run_phase099_codec_sweep.sh  run_phase099_single_site.py  run_phase099_tranche1b.sh  run_phase099_tranche6.sh  run_phase09_matrix.sh  run_phase09_rehearsal.py  run_phase0_control.py  run_phase0_gemma.py  run_phase_minus1.py  sweep_capture.py  train_bsc.py  train_single_site.py  validate_codec.py  validate_rd_codec.py  validate_revival.py  validate_theta.py  validate_whitener.py  verify_store.py
tests/: conftest.py  test_analysis_catalog.py  test_analysis_manifold_metrics.py  test_analysis_trained_endpoints.py  test_campaign.py  test_codec.py  test_cuda_code_norm.py  test_cuda_gradient_copy.py  (+32 more)
(+277 files in other folders)
