[project]
name = "block-crosscoder-experiment"
version = "0.1.0"
description = "Block-sparse crosscoders: unsupervised cross-layer manifold discovery on gemma, feeding the saklas steering runtime."
readme = "README.md"
requires-python = ">=3.12"
license = "CC-BY-SA-4.0"
license-files = ["LICENSE"]
authors = [{ name = "a9lim", email = "mx@a9l.im" }]
dependencies = [
    "transformer-experiments>=0.1,<0.2",
    "datasets",
    "numpy",
    "sae-lens",
    "saklas>=1.4.6",
    "scikit-learn",
    "scipy",
    "torch",
    # saklas is also developed locally when needed:
    #   pip install -e ../../saklas
    #   pip install -e .
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["block_crosscoder_experiment"]
