[project]
name = "block-crosscoder-experiment"
version = "0.1.0"
description = "Phased paper-bridge experiments for block-sparse crosscoders."
readme = "README.md"
requires-python = ">=3.12"
license = "CC-BY-SA-4.0"
license-files = ["LICENSE"]
authors = [{ name = "a9lim", email = "mx@a9l.im" }]
dependencies = [
    "datasets",
    "huggingface-hub",
    "numpy",
    "sae-lens",
    "safetensors",
    "torch",
    "transformers",
]

[project.scripts]
bsc = "block_crosscoder_experiment.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["block_crosscoder_experiment"]
